--- a/corpNavig/index.html
+++ b/corpNavig/index.html
@@ -11,6 +11,7 @@
         type="text/javascript"
         src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
         data-sap-ui-theme="sap_bluecrystal"
+        data-sap-ui-compatVersion="edge"
         data-sap-ui-libs="sap.m"
         data-sap-ui-preload="async"
         data-sap-ui-resourceroots='{"MyApp.corpNavig" : "./"}'></script>
